JVM示例代码